Header+ min stule css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nice</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="title">
+            <h2>nice</h2>
+        </div>
+        <div class="text one">o que fazemos</div>
+        <div class="text two">como te ajudamos</div>
+        <div class="text three">fale conosco</div>
+        <a href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"><img src="/img/icons/instagram.svg" alt="instagram"></a>
+        <a href="https://uk-ua.facebook.com/"><img src="/img/icons/facebook-f.svg" alt="facebook"></a>
+        
+    </div>
+
 </body>
 </html>
