--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nice</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
         <div class="title">
-            <h2>nice</h2>
+            <div class="title_img"><img src="/img/icons/logo_nice.svg" alt="nice"></div>
         </div>
-        <div class="text one">o que fazemos</div>
-        <div class="text two">como te ajudamos</div>
-        <div class="text three">fale conosco</div>
-        <a href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"><img src="/img/icons/instagram.svg" alt="instagram"></a>
-        <a href="https://uk-ua.facebook.com/"><img src="/img/icons/facebook-f.svg" alt="facebook"></a>
-        
+        <div class="text_box">
+        <a  href="#" class="text_one">o que fazemos</a>
+        <a  href="#" class="text_two">como te ajudamos</a>
+        <a  href="#" class="text_three">afale conosco</a>
+        </div>
+        <div class="link">
+       <div class="instagram_link"><a href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"><img src="/img/icons/instagram.svg" alt="instagram"></a></div> 
+       <div class="feacebook_link"><a href="https://uk-ua.facebook.com/"><img src="/img/icons/facebook-f.svg" alt="facebook"></a></div> 
+        </div>
     </div>
 
+</a>
 </body>
 </html>
