--- a/index.html
+++ b/index.html
@@ -1,25 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nice</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="header">
-        <div class="title">
-            <div class="title_img"><img src="/img/icons/logo_nice.svg" alt="nice"></div>
+      <div class="title">
+        <div class="title_img">
+          <img src="/img/icons/logo_nice.svg" alt="nice" />
         </div>
-        <div class="text_box">
-        <a  href="#" class="text_one">o que fazemos</a>
-        <a  href="#" class="text_two">como te ajudamos</a>
-        <a  href="#" class="text_three">afale conosco</a>
+      </div>
+      <div class="text_box">
+        <a href="#" class="text_one">o que fazemos</a>
+        <a href="#" class="text_two">como te ajudamos</a>
+        <a href="#" class="text_three">afale conosco</a>
+      </div>
+      <div class="link">
+        <div class="instagram_link">
+          <a
+            href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"
+            ><img src="/img/icons/instagram.svg" alt="instagram"
+          /></a>
         </div>
-        <div class="link">
-       <div class="instagram_link"><a href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"><img src="/img/icons/instagram.svg" alt="instagram"></a></div> 
-       <div class="feacebook_link"><a href="https://uk-ua.facebook.com/"><img src="/img/icons/facebook-f.svg" alt="facebook"></a></div> 
+        <div class="feacebook_link">
+          <a href="https://uk-ua.facebook.com/"
+            ><img src="/img/icons/facebook-f.svg" alt="facebook"
+          /></a>
         </div>
+      </div>
     </div>
-</body>
+
+    <div class="slogan">
+      <div class="slogan_promo">
+        <h1>
+          Um slogan <br />
+          chamativo aqui.
+        </h1>
+      </div>
+      <div class="slogan_text">
+        <h2>
+          Um texto sobre o seu produto ou serviço. Explique <br />
+          <b> porque ele é valioso</b> e direcione o usuário ao <br />
+          próximo objetivo.
+        </h2>
+      </div>
+      <div class="simple-radial"></div>
+      <div class="rectangle"></div>
+      <div class="slogan_img">
+        <img src="/img/photo/Businessman_slogan.png" alt="Businessman" />
+      </div>
+      <div class="slogan_img_2">
+        <img src="/img/icons/Burger.png" alt="Burger" />
+      </div>
+      <div class="slogan_btn1"><button type="button" class="button_sl_1">Eu quero!</button></div>
+      <div class="slogan_btn2">
+        <button type="button" class="button_sl_2">Conhecer mais</button>
+      </div>
+    </div>
+  </body>
 </html>
