--- a/index.html
+++ b/index.html
@@ -55,9 +55,59 @@
       <div class="slogan_img_2">
         <img src="/img/icons/Burger.png" alt="Burger" />
       </div>
-      <div class="slogan_btn1"><button type="button" class="button_sl_1">Eu quero!</button></div>
+      <div class="slogan_btn1">
+        <button type="button" class="button_sl_1">Eu quero!</button>
+      </div>
       <div class="slogan_btn2">
         <button type="button" class="button_sl_2">Conhecer mais</button>
+      </div>
+    </div>
+    <div class="benificio">
+      <div class="ben_title">
+        <h3>Um subtítulo para quem rolou até aqui!</h3>
+      </div>
+      <div class="ben_stick"></div>
+      <div class="ben_text">
+        Aproveite esta seção para destacar os benefícios do seu produto ou
+        serviço. <br />Palavras-chave ajudam no SEO.
+      </div>
+    </div>
+    <div class="ben_menu">
+      <div class="section_one">
+        <img src="/img/icons/Target.png" alt="Target" />
+        <div class="section_one_name">Rápido</div>
+        <div class="section_one_text">
+          Aproveite esta seção para <br />
+          destacar os benefícios do <br />
+          seu produto ou serviço.
+        </div>
+        <div class="section_one_btn">
+          <button type="button" class="section_btn">+</button>
+        </div>
+      </div>
+      <div class="section_two">
+        <img src="/img/icons/Ethereum Coin.png" alt="Ethereum" />
+        <div class="section_two_name">Do seu jeito</div>
+        <div class="section_two_text">
+          Aproveite esta seção para <br />
+          destacar os benefícios do <br />
+          seu produto ou serviço.
+        </div>
+        <div class="section_two_btn">
+          <button type="button" class="section_btn">+</button>
+        </div>
+      </div>
+      <div class="section_three">
+        <img src="/img/icons/Credit Card.png" alt="Card" />
+        <div class="section_three_name">Como você queria</div>
+        <div class="section_three_text">
+          Aproveite esta seção para <br />
+          destacar os benefícios do <br />
+          seu produto ou serviço.
+        </div>
+        <div class="section_three_btn">
+          <button type="button" class="section_btn">+</button>
+        </div>
       </div>
     </div>
   </body>
