--- a/index.html
+++ b/index.html
@@ -110,5 +110,25 @@
         </div>
       </div>
     </div>
+    <div class="simples">
+      <a href="#" class="contecomagente">#CONTECOMAGENTE</a>
+      <div class="simples_promo">
+        <h2>Simples, rápido <br> e do seu jeito.</h2>
+      </div>
+      <div class="simples_text">
+        Mostre os valores da sua marca e como ela pode fazer <br> parte da vida do usuário que está lendo. Gerar <br> identificação é a chave para <b> conquistar seu cliente.</b>
+      </div>
+      <button class="simples_btn">Eu quero!</button>
+      <div class="simples_gradient2"></div>
+      <div class="simples_gradient"></div>
+
+      <div class="simples_men"><img src="/img/photo/Man talking on phone.png" alt="Man"></div>
+      <div class="simples_burger1"><img src="/img/icons/BurgerShape1.png" alt="burger1"></div>
+      
+      <div class="simples_burger2"><img src="/img/icons/BurgerShape2.png" alt="burger2"></div>
+      <div class="simples_burger3"><img src="/img/icons/BurgerShape3.png" alt="burger3"></div>
+      <div class="simples_burger4"><img src="/img/icons/BurgerShape4.png" alt="burger4"></div>
+
+    </div>
   </body>
 </html>
