--- a/index.html
+++ b/index.html
@@ -113,22 +113,75 @@
     <div class="simples">
       <a href="#" class="contecomagente">#CONTECOMAGENTE</a>
       <div class="simples_promo">
-        <h2>Simples, rápido <br> e do seu jeito.</h2>
+        <h2>
+          Simples, rápido <br />
+          e do seu jeito.
+        </h2>
       </div>
       <div class="simples_text">
-        Mostre os valores da sua marca e como ela pode fazer <br> parte da vida do usuário que está lendo. Gerar <br> identificação é a chave para <b> conquistar seu cliente.</b>
+        Mostre os valores da sua marca e como ela pode fazer <br />
+        parte da vida do usuário que está lendo. Gerar <br />
+        identificação é a chave para <b> conquistar seu cliente.</b>
       </div>
       <button class="simples_btn">Eu quero!</button>
       <div class="simples_gradient2"></div>
       <div class="simples_gradient"></div>
 
-      <div class="simples_men"><img src="/img/photo/Man talking on phone.png" alt="Man"></div>
-      <div class="simples_burger1"><img src="/img/icons/BurgerShape1.png" alt="burger1"></div>
-      
-      <div class="simples_burger2"><img src="/img/icons/BurgerShape2.png" alt="burger2"></div>
-      <div class="simples_burger3"><img src="/img/icons/BurgerShape3.png" alt="burger3"></div>
-      <div class="simples_burger4"><img src="/img/icons/BurgerShape4.png" alt="burger4"></div>
+      <div class="simples_men">
+        <img src="/img/photo/Man talking on phone.png" alt="Man" />
+      </div>
+      <div class="simples_burger1">
+        <img src="/img/icons/BurgerShape1.png" alt="burger1" />
+      </div>
 
+      <div class="simples_burger2">
+        <img src="/img/icons/BurgerShape2.png" alt="burger2" />
+      </div>
+      <div class="simples_burger3">
+        <img src="/img/icons/BurgerShape3.png" alt="burger3" />
+      </div>
+      <div class="simples_burger4">
+        <img src="/img/icons/BurgerShape4.png" alt="burger4" />
+      </div>
+      
     </div>
+    <div class="ainda">
+        <div class="ainda_img">
+          <img src="/img/icons/Chat.png" alt="Chat" />
+        </div>
+        <h3 class="ainda_promo">Ainda tem dúvidas? Fale conosco!</h3>
+        <div class="ainda_stick"></div>
+        <div class="ainda_chapter">
+          <div class="ainda_chapter_one">
+              <div class="ainda_text">
+          Ofereça um meio de comunicação direto. <br> Pode ser um <b class="ainda_email"> contato@email.com.br</b> <br> <br>
+Ou crie um formulário ao lado que entrem em <br> contato <b class="ainda_rapido"> o mais rápido possível!</b>
+        </div>
+        <div class="ainda_link_whatsapp">
+          <a href="https://www.whatsapp.com/?lang=ru_RU"><img src="/img/icons/whatsapp-icon.png" alt="whatsapp" class="watsap_img"></a>
+          <a href="https://www.whatsapp.com/?lang=ru_RU" class="whatsapp_link">Hey! Estamos no whatsapp!</a>
+
+        </div>
+          </div>
+          <div class="ainda_chapter_two">
+            <div class="input_name">
+              <h3 class="ainda_input_name">Nome</h3>
+              <!-- <label for="name">Nome Sobrenome</label> -->
+              <input type="text" id="name" name="name" required minlength="2" maxlength="15" size="20" placeholder="Nome Sobrenome" class="input_net" >
+            </div>
+            <div class="input_email">
+              <h3 class="ainda_input_email">Email</h3>
+              <input type="email" name=email"" id="email" required minlength="3" size="20" placeholder="nome@email.com.br" class="input_net">
+            </div>
+              <div class="input_telefone">
+                <h3 class="ainda_input_telefone">Telefone</h3>
+                <input type="tel" name="tel" id="tel" required minlength="5" size="20" placeholder="21 9988-7766" class="input_net">
+              </div>
+              <div class="ainda_chapter_two_btn">
+                <button type="button" class="simples_btn">Enviar!</button>
+              </div>
+
+        </div>
+      </div>
   </body>
 </html>
