--- a/index.html
+++ b/index.html
@@ -183,5 +183,39 @@ Ou crie um formulário ao lado que entrem em <br> contato <b class="ainda_rapido
 
         </div>
       </div>
+      </div>
+      <div class="footer">
+        <div class="footer_top">
+        <div class="footer_logo">
+          <h3 class="logo_text">nice</h3>
+        </div>
+        <div class="footer_link_text">
+          <a href="#" class="text_one">o que fazemos</a>
+        <a href="#" class="text_two">como te ajudamos</a>
+        <a href="#" class="text_three">afale conosco</a>
+        </div>
+        <div class="footer_link_logo">
+          <div class="instagram_link">
+          <a
+            href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"
+            ><img src="/img/icons/instagram_w.svg" alt="instagram"
+          /></a>
+        </div>
+        <div class="feacebook_link">
+          <a href="https://uk-ua.facebook.com/"
+            ><img src="/img/icons/facebook-white.svg" alt="facebook"
+          /></a>
+        </div>
+        </div>
+        </div>
+        <div class="footer_down">
+          <div class="footer_down_text"><a href="#"> Receba as novidades do nice</a></div>
+          <input type="text" placeholder="nome@email.com" class="footer_down_text_pla" >
+        <button class="footer_down_text_btn">Inscrever</button> 
+        <div class="footer_down_stick"></div>
+        <div class="footer_down_stick_2">Nice template by @lopesluiza on Figma - 2021</div>
+        </div>
+      </div>
+
   </body>
 </html>
