--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
       <div class="title">
         <div class="title_img">
-          <img src="/img/icons/logo_nice.svg" alt="nice" />
+          <img src="img/icons/logo_nice.svg" alt="nice" />
         </div>
       </div>
       <div class="text_box">
@@ -22,12 +22,12 @@
         <div class="instagram_link">
           <a
             href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"
-            ><img src="/img/icons/instagram.svg" alt="instagram"
+            ><img src="img/icons/instagram.svg" alt="instagram"
           /></a>
         </div>
         <div class="feacebook_link">
           <a href="https://uk-ua.facebook.com/"
-            ><img src="/img/icons/facebook-f.svg" alt="facebook"
+            ><img src="img/icons/facebook-f.svg" alt="facebook"
           /></a>
         </div>
       </div>
@@ -50,10 +50,10 @@
       <div class="simple-radial"></div>
       <div class="rectangle"></div>
       <div class="slogan_img">
-        <img src="/img/photo/Businessman_slogan.png" alt="Businessman" />
+        <img src="img/photo/Businessman_slogan.png" alt="Businessman" />
       </div>
       <div class="slogan_img_2">
-        <img src="/img/icons/Burger.png" alt="Burger" />
+        <img src="img/icons/Burger.png" alt="Burger" />
       </div>
       <div class="slogan_btn1">
         <button type="button" class="button_sl_1">Eu quero!</button>
@@ -74,7 +74,7 @@
     </div>
     <div class="ben_menu">
       <div class="section_one">
-        <img src="/img/icons/Target.png" alt="Target" />
+        <img src="img/icons/Target.png" alt="Target" />
         <div class="section_one_name">Rápido</div>
         <div class="section_one_text">
           Aproveite esta seção para <br />
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="section_two">
-        <img src="/img/icons/Ethereum Coin.png" alt="Ethereum" />
+        <img src="img/icons/Ethereum Coin.png" alt="Ethereum" />
         <div class="section_two_name">Do seu jeito</div>
         <div class="section_two_text">
           Aproveite esta seção para <br />
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="section_three">
-        <img src="/img/icons/Credit Card.png" alt="Card" />
+        <img src="img/icons/Credit Card.png" alt="Card" />
         <div class="section_three_name">Como você queria</div>
         <div class="section_three_text">
           Aproveite esta seção para <br />
@@ -128,26 +128,26 @@
       <div class="simples_gradient"></div>
 
       <div class="simples_men">
-        <img src="/img/photo/Man talking on phone.png" alt="Man" />
+        <img src="img/photo/Man talking on phone.png" alt="Man" />
       </div>
       <div class="simples_burger1">
-        <img src="/img/icons/BurgerShape1.png" alt="burger1" />
+        <img src="img/icons/BurgerShape1.png" alt="burger1" />
       </div>
 
       <div class="simples_burger2">
-        <img src="/img/icons/BurgerShape2.png" alt="burger2" />
+        <img src="img/icons/BurgerShape2.png" alt="burger2" />
       </div>
       <div class="simples_burger3">
-        <img src="/img/icons/BurgerShape3.png" alt="burger3" />
+        <img src="img/icons/BurgerShape3.png" alt="burger3" />
       </div>
       <div class="simples_burger4">
-        <img src="/img/icons/BurgerShape4.png" alt="burger4" />
+        <img src="img/icons/BurgerShape4.png" alt="burger4" />
       </div>
       
     </div>
     <div class="ainda">
         <div class="ainda_img">
-          <img src="/img/icons/Chat.png" alt="Chat" />
+          <img src="img/icons/Chat.png" alt="Chat" />
         </div>
         <h3 class="ainda_promo">Ainda tem dúvidas? Fale conosco!</h3>
         <div class="ainda_stick"></div>
@@ -158,7 +158,7 @@
 Ou crie um formulário ao lado que entrem em <br> contato <b class="ainda_rapido"> o mais rápido possível!</b>
         </div>
         <div class="ainda_link_whatsapp">
-          <a href="https://www.whatsapp.com/?lang=ru_RU"><img src="/img/icons/whatsapp-icon.png" alt="whatsapp" class="watsap_img"></a>
+          <a href="https://www.whatsapp.com/?lang=ru_RU"><img src="img/icons/whatsapp-icon.png" alt="whatsapp" class="watsap_img"></a>
           <a href="https://www.whatsapp.com/?lang=ru_RU" class="whatsapp_link">Hey! Estamos no whatsapp!</a>
 
         </div>
@@ -198,12 +198,12 @@ Ou crie um formulário ao lado que entrem em <br> contato <b class="ainda_rapido
           <div class="instagram_link">
           <a
             href="https://www.instagram.com/challenge/?next=https%3A%2F%2Fwww.instagram.com%2F%3F__coig_challenged%3D1"
-            ><img src="/img/icons/instagram_w.svg" alt="instagram"
+            ><img src="img/icons/instagram_w.svg" alt="instagram"
           /></a>
         </div>
         <div class="feacebook_link">
           <a href="https://uk-ua.facebook.com/"
-            ><img src="/img/icons/facebook-white.svg" alt="facebook"
+            ><img src="img/icons/facebook-white.svg" alt="facebook"
           /></a>
         </div>
         </div>
